Implement dynamic table insertion

--- a/pdf-reader/scripts/push_supabase.ipynb
+++ b/pdf-reader/scripts/push_supabase.ipynb
@@ -2,106 +2,153 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 114,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
+    "from pandas.api.types import is_float_dtype, is_integer_dtype, is_object_dtype\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
     "from supabase import create_client, Client\n",
     "import psycopg2\n",
-    "from psycopg2 import sql"
+    "from psycopg2 import sql\n",
+    "import unicodedata\n",
+    "from google import genai\n",
+    "from google.genai import types"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 115,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# creating supabase client\n",
     "load_dotenv()\n",
     "\n",
+    "file_name = \"Deliberation_2024_2025_L3_S5\"\n",
     "url: str = os.getenv(\"SUPABASE_URL\")\n",
     "key: str = os.getenv(\"SUPABASE_KEY\")\n",
+    "key_llm = os.getenv(\"GOOGLE_API_KEY\")\n",
     "db_url: str = os.getenv(\"DATABASE_URL\")\n",
-    "client: Client = create_client(url, key)"
+    "client: Client = create_client(url, key)\n",
+    "client_llm = genai.Client(api_key=key_llm)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 116,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# getting the student data from csv file\n",
-    "data = pd.read_csv(\"../data/deliberation_postprocess.csv\")\n",
+    "data = pd.read_csv(f\"../data/{file_name}_postprocess.csv\")\n",
     "\n",
-    "# matching column names\n",
-    "match_dict = {\n",
-    "    'Name': 'name',\n",
-    "    'Code': 'code',\n",
-    "    'Physique 1': 'phy1',\n",
-    "    'Moyenne_1': 'moyenne_a',\n",
-    "    'Credit_1': 'credit_a',\n",
-    "    'Algebre 1': 'algebre1',\n",
-    "    'Analyse 1': 'analyse1',\n",
-    "    'Moyenne_2': 'moyenne_b',\n",
-    "    'Credit_2': 'credit_b',\n",
-    "    'Algorithmique et Structure de Donné 1': 'asd1',\n",
-    "    'Structure Machine 1': 'sm1',\n",
-    "    'Moyenne_3': 'moyenne_c',\n",
-    "    'Credit_3': 'credit_c',\n",
-    "    'Langue Etranger 1': 'le1',\n",
-    "    'Expression Scientifique Terminologie': 'est',\n",
-    "    'Moyenne_4': 'moyenne_d',\n",
-    "    'Credit_4': 'credit_d',\n",
-    "    'Semestre Credit': 'semestre_credit',\n",
-    "    'Moyenne Semestre': 'moyenne_semestre',\n",
-    "    'Section': 'section'\n",
-    "}\n",
+    "def replace_french_e(text):\n",
+    "    normalized_text = unicodedata.normalize('NFD', text)\n",
+    "    transformed_text = ''.join(char for char in normalized_text if not unicodedata.combining(char))\n",
+    "    return transformed_text\n",
     "\n",
-    "# renaming\n",
-    "data = data.rename(columns=match_dict)"
+    "def remove_newlines(text_list):\n",
+    "    for i in range(len(text_list)):\n",
+    "        text_list[i] = text_list[i].replace('\\n', '')\n",
+    "    return text_list"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 117,
    "metadata": {},
    "outputs": [],
    "source": [
+    "sys_instruct = \"\"\"\n",
+    "You are a text formatting assistant specializing in data preparation for databases. When given an array of elements, follow these precise instructions:\n",
+    "\n",
+    "- Accept any array of string elements.\n",
+    "- Convert all characters to lowercase.\n",
+    "- Replace all spaces and special characters (e.g., apostrophes) with underscores (`_`).\n",
+    "- **Ensure the final output is a single, strictly comma-separated string with no spaces between elements and no trailing comma.**\n",
+    "\n",
+    "**Example Input:**\n",
+    "Name,Code,Compilation,Système d'exploitation 2,Moyenne UE 1,Crédit UE 1,Génie Logiciel 2,Interface Machine Homme,Moyenne UE 2,Crédit UE 2,Probabilités et Statistiques,Programmation Linéaire,Moyenne UE 3,Crédit UE 3,Economie et veille stratégique numérique,Moyenne UE 4,Crédit UE 4,Crédits du Semestre,Moyenne du Semestre\n",
+    "\n",
+    "**Expected Output:**\n",
+    "`name,code,compilation,systeme_d_exploitation_2,moyenne_ue_1,credit_ue_1,genie_logiciel_2,interface_machine_homme,moyenne_ue_2,credit_ue_2,probabilites_et_statistiques,programmation_lineaire,moyenne_ue_3,credit_ue_3,economie_et_veille_strategique_numerique,moyenne_ue_4,credit_ue_4,credits_du_semestre,moyenne_du_semestre`\n",
+    "\n",
+    "Respond only with the formatted output unless otherwise instructed.\n",
+    "\"\"\"\n",
+    "\n",
+    "def generate_db_names(names):\n",
+    "    response = client_llm.models.generate_content(\n",
+    "    model=\"gemini-2.0-flash\",\n",
+    "    config=types.GenerateContentConfig(\n",
+    "        system_instruction=sys_instruct),\n",
+    "    contents=[names],\n",
+    "    )\n",
+    "    return response.text"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 118,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Name': 'name', 'Code': 'code', 'Compilation': 'compilation', \"Système d'exploitation 2\": 'systeme_d_exploitation_2', 'Moyenne UE 1': 'moyenne_ue_1', 'Crédit UE 1': 'credit_ue_1', 'Génie Logiciel 2': 'genie_logiciel_2', 'Interface Machine Homme': 'interface_machine_homme', 'Moyenne UE 2': 'moyenne_ue_2', 'Crédit UE 2': 'credit_ue_2', 'Probabilités et Statistiques': 'probabilites_et_statistiques', 'Programmation Linéaire': 'programmation_lineaire', 'Moyenne UE 3': 'moyenne_ue_3', 'Crédit UE 3': 'credit_ue_3', 'Economie et veille numérique stratégique': 'economie_et_veille_numerique_strategique', 'Moyenne UE 4': 'moyenne_ue_4', 'Crédit UE 4': 'credit_ue_4', 'Crédits du Semestre': 'credits_du_semestre', 'Moyenne du Semestre': 'moyenne_du_semestre'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# creating mappings & db column names\n",
+    "db_cols = generate_db_names(\",\".join(data.columns.to_list())).split(\",\")\n",
+    "db_cols = remove_newlines(db_cols)\n",
+    "cols = data.columns.to_list()\n",
+    "mappings = dict(zip(cols, db_cols))\n",
+    "print(mappings)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 119,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "CREATE TABLE IF NOT EXISTS analysis_Deliberation_2024_2025_L3_S5 (\n",
+      "    id UUID DEFAULT gen_random_uuid() PRIMARY KEY,\n",
+      "    name text, code text, compilation float8, systeme_d_exploitation_2 float8, moyenne_ue_1 float8, credit_ue_1 int8, genie_logiciel_2 float8, interface_machine_homme float8, moyenne_ue_2 float8, credit_ue_2 int8, probabilites_et_statistiques float8, programmation_lineaire float8, moyenne_ue_3 float8, credit_ue_3 int8, economie_et_veille_numerique_strategique float8, moyenne_ue_4 float8, credit_ue_4 int8, credits_du_semestre int8, moyenne_du_semestre float8\n",
+      ")\n",
+      "\n",
+      "{'name': 'text', 'code': 'text', 'compilation': 'float8', 'systeme_d_exploitation_2': 'float8', 'moyenne_ue_1': 'float8', 'credit_ue_1': 'int8', 'genie_logiciel_2': 'float8', 'interface_machine_homme': 'float8', 'moyenne_ue_2': 'float8', 'credit_ue_2': 'int8', 'probabilites_et_statistiques': 'float8', 'programmation_lineaire': 'float8', 'moyenne_ue_3': 'float8', 'credit_ue_3': 'int8', 'economie_et_veille_numerique_strategique': 'float8', 'moyenne_ue_4': 'float8', 'credit_ue_4': 'int8', 'credits_du_semestre': 'int8', 'moyenne_du_semestre': 'float8'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "schema = []\n",
+    "table_cols = data.columns.to_list()\n",
+    "\n",
+    "for col in table_cols:\n",
+    "    is_int = is_integer_dtype(data[col])\n",
+    "    is_float = is_float_dtype(data[col])\n",
+    "    is_object = is_object_dtype(data[col])\n",
+    "\n",
+    "    if is_float:\n",
+    "        schema.append([mappings[col], \"float8\"])\n",
+    "    if is_int:\n",
+    "        schema.append([mappings[col], \"int8\"])\n",
+    "    if is_object:\n",
+    "        schema.append([mappings[col], \"text\"])\n",
     "\n",
     "\n",
-    "# sechema\n",
-    "table_schema = {\n",
-    "    \"name\": \"text\",\n",
-    "    \"code\": \"text\",\n",
-    "    \"phy1\": \"float8\",\n",
-    "    \"moyenne_a\": \"float8\",\n",
-    "    \"credit_a\": \"int8\",\n",
-    "    \"algebre1\": \"float8\",\n",
-    "    \"analyse1\": \"float8\",\n",
-    "    \"moyenne_b\": \"float8\",\n",
-    "    \"credit_b\": \"int8\",\n",
-    "    \"asd1\": \"float8\",\n",
-    "    \"sm1\": \"float8\",\n",
-    "    \"moyenne_c\": \"float8\",\n",
-    "    \"credit_c\": \"int8\",\n",
-    "    \"le1\": \"float8\",\n",
-    "    \"est\": \"float8\",\n",
-    "    \"moyenne_d\": \"float8\",\n",
-    "    \"credit_d\": \"int8\",\n",
-    "    \"semestre_credit\": \"int8\",\n",
-    "    \"moyenne_semestre\": \"float8\",\n",
-    "    \"section\": \"float8\"\n",
-    "}\n",
-    "\n",
-    "\n",
+    "dict_schema = dict(schema)\n",
     "# table name \n",
-    "table_name = \"analysis_student_grades_usthb\"\n",
-    "columns = \", \".join([f\"{col} {dtype}\" for col, dtype in table_schema.items()])\n",
+    "table_name = f\"analysis_{file_name}\"\n",
+    "columns = \", \".join([f\"{col} {dtype}\" for col, dtype in dict_schema.items()])\n",
     "\n",
     "# table creation query\n",
     "create_table_query = f\"\"\"\n",
@@ -109,12 +156,18 @@
     "    id UUID DEFAULT gen_random_uuid() PRIMARY KEY,\n",
     "    {columns}\n",
     ")\n",
-    "\"\"\"\n"
+    "\"\"\"\n",
+    "\n",
+    "# transforming col names\n",
+    "data.columns = [mappings[col] for col in data.columns]\n",
+    "\n",
+    "print(create_table_query)\n",
+    "print(dict_schema)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 120,
    "metadata": {},
    "outputs": [
     {
@@ -122,7 +175,7 @@
      "output_type": "stream",
      "text": [
       "Connection successful!\n",
-      "Table 'analysis_student_grades_usthb' already exists.\n"
+      "Table 'analysis_Deliberation_2024_2025_L3_S5' created successfully.\n"
      ]
     }
    ],
@@ -171,48 +224,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 123,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Inserted 0 rows successfully\n",
-      "Inserted 100 rows successfully\n",
-      "Inserted 200 rows successfully\n",
-      "Inserted 300 rows successfully\n",
-      "Inserted 400 rows successfully\n",
-      "Inserted 500 rows successfully\n",
-      "Inserted 600 rows successfully\n",
-      "Inserted 700 rows successfully\n",
-      "Inserted 800 rows successfully\n",
-      "Inserted 900 rows successfully\n",
-      "Inserted 1000 rows successfully\n",
-      "Inserted 1100 rows successfully\n",
-      "Inserted 1200 rows successfully\n",
-      "Inserted 1300 rows successfully\n",
-      "Inserted 1400 rows successfully\n"
+      "Records inserted successfully\n"
      ]
     }
    ],
    "source": [
     "# inserting data\n",
     "i = 0\n",
-    "for row in data.to_dict(orient='records'):\n",
-    "    response = client.table(\"analysis_student_grades_usthb\").insert(row).execute()\n",
-    "    if i % 100 == 0:\n",
-    "        print(f\"Inserted {i} rows successfully\")\n",
-    "    i += 1\n",
-    "print(f\"{i} Rows inserted successfully\")"
+    "records = data.to_dict(orient=\"records\")\n",
+    "response = client.table(table_name.lower()).insert(records).execute()\n",
+    "print(\"Records inserted successfully\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
